# berk-ai-hackathon

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CURSOR.md  README.md  STATUS.md  pyproject.toml
dashboard/: __init__.py  datasource.py  orchestrator_client.py  server.py
dashboard/fixtures/: er_state.json
dashboard/static/: app.js  floor.js  index.html  library.html  login.html  style.css
docs/: TEAM.md
docs/arrows/: dashboard.md  er-twin-core.md  index.yaml
docs/llds/: dashboard.lld.md  er-twin-core.lld.md
docs/plans/: 2026-06-20-er-twin-core.plan.md
docs/specs/: dashboard-specs.md  er-events-specs.md
er_twin/: config.py  main.py  protocols.py
er_twin/agents/: orchestrator.py
er_twin/events/: discharge_flow.py
tests/: test_dashboard.py  test_event_oxygen.py  test_event_registry.py  test_event_summary.py  test_integration_wiring.py
